--- a/package.json
+++ b/package.json
@@ -13,12 +13,17 @@
   "description": "",
   "dependencies": {
     "@grammyjs/hydrate": "^1.6.0",
+    "axios": "^1.13.2",
     "dotenv": "^17.2.3",
     "grammy": "^1.38.3",
     "nodemon": "^3.1.11"
   },
   "devDependencies": {
+    "@types/mongoose": "^5.11.96",
     "@types/node": "^24.10.1",
+    "i": "^0.3.7",
+    "mongoose": "^9.0.1",
+    "npm": "^11.6.4",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3"
   }
